<resources>
    <string name="all_fields_must_be_filled">All fields must be filled.</string>
    <string name="App_info">Welcome to the Book Club App!\nTo add a book, click the button below.\nEach book you add will appear in the list above.</string>
    <string name="app_name">Book Club</string>
    <string name="author">Author</string>
    <string name="average_rating">Average Rating: </string>
    <string name="average_rating_user">Average Rating: %1$.1f</string>
    <string name="book_added_successfully">Book added successfully! You may exit the page</string>
    <string name="book_deleted">The book is now gone.</string>
    <string name="book_details">Book Details</string>
    <string name="book_list">Book List</string>
    <string name="book_updated_successfully">Book updated successfully! You may exit the page</string>
    <string name="choose_image">Choose Image PLEASE</string>
    <string name="delete_book_message">Are you sure you want to delete %1$s?</string>
    <string name="delete_book_title">Delete Book</string>
    <string name="delete_cancel">NO!! nooo!!</string>
    <string name="delete_yes">Yes! Im sure!!</string>
    <string name="edit_book">Edit Book</string>
    <string name="failed_to_load_image_please_try_again">Failed to load image. Please try again.</string>
    <string name="image_selection_canceled">Image selection canceled.</string>
    <string name="image_updated">Image updated!</string>
    <string name="no_data">No data available</string>
    <string name="review">Your Review</string>
    <string name="save">Save</string>
    <string name="statistics">Statistics for nerds</string>
    <string name="title">Title</string>
    <string name="top_3_rated_books">Top 3 Rated Books: </string>
    <string name="total_reviews">Total Reviews: %1$d</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_reviews">Your Reviews:</string>
    <string name="user_profile_page">user profile page</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile_title">Edit profile info</string>
    <string name="go_to_your_favorite_reviews">Go to your favorite reviews</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="top_rated_books_legend">Top Rated Books</string>
    <string name="total_books">Total Books: %d</string>
    <string name="book_of_the_month">Book of the Month</string>
    <string name="please_type_book_title_or_author">Please type book title or author</string>
    <string name="book_details_found_successfully">Book details found successfully</string>
    <string name="please_type_book_name_or_author">Please type book name or author</string>
    <string name="error_connecting_to_server">Error connecting to server</string>
    <string name="book_not_found">Book not found</string>
    <string name="error">Error: %1$s</string>
    <string name="search_book_details">Search book details</string>
    <string name="book_cover_desc">Book cover image</string>
    <string name="back_button">Back</string>
    <string name="your_rating">Your Rating</string>
    <string name="your_review">Your Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="share">Share</string>
    <string name="title_my_library">My Library</string>
    <string name="hint_search_books">Search books</string>
    <string name="label_total_books">Total Books</string>
    <string name="label_avg_rating">Average Rating</string>
    <string name="label_total_reviews">Total Reviews</string>
    <string name="your_books">Your Books</string>
    <string name="add_book">Add Book</string>
    <string name="book_cover">Book Cover</string>
    <string name="status_read">Read</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="select_book_from_list">Select book from the list</string>
    <string name="loved_the_book_title">It looks like you\'ve loved the book</string>
    <string name="want_similar_books">Would you like similar recommendations?</string>
    <string name="similar_books_title">Similar books</string>
    <string name="rating">Rating</string>
    <string name="title_share">📘 Book Title: %1$s</string>
    <string name="author_share">✍️ Author: %1$s</string>
    <string name="rating_share">⭐️ Rating: %1$.1f⭐️</string>
    <string name="review_share">📝 Review: %1$s</string>
    <string name="share_review">Share Review</string>
    <string name="share_as_text">Share as text</string>
    <string name="share_as_image">Share as image</string>
    <string name="pick_a_way_to_share">Pick a way to share</string>
    <string name="liked">Liked</string>
    <string name="like_review">Like review</string>
    <string name="newest">Newest</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="choose_cover">Choose Cover</string>
    <string name="fetch_book">Fetch Book</string>
    <string name="book_information">Book Information</string>
    <string name="book_title">Book Title</string>
    <string name="tap_stars_to_rate">Tap stars to rate</string>
    <string name="write_your_thoughts_about_this_book">Write your thoughts about this book</string>
    <string name="save_book">Save Book</string>
    <string name="reviews">Reviews</string>
    <string name="book_club_logo">Book Club Logo</string>
    <string name="welcome_to_book_club">Welcome to Book Club</string>
    <string name="discover_new_books_and_share_your_reviews">Discover new books and share your reviews</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="read_reviews_rate_books_stay_updated">Read Reviews • Rate Books • Stay Updated</string>
    <string name="discover_your_next_great_read_today">Discover your next great read today!</string>
    <string name="logo">Logo</string>
    <string name="reading_statistics">Reading Statistics</string>
    <string name="_0">0</string>
    <string name="_0_0">0.0</string>
    <string name="avg_rating">Avg Rating</string>
    <string name="featured_book">Featured Book</string>
    <string name="no_data_available">No data available</string>
    <string name="top_rated_books">Top Rated Books</string>
    <string name="ratings_chart">Ratings Chart</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="welcomee">Welcome!</string>
    <string name="wlcome">Welcome</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="could_not_load_usernamee">Could not load username</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="user_not_logged__in">User not logged in</string>
    <string name="username_updatedd">Username updated</string>
    <string name="failed_to_update_usernamee">Failed to update username</string>
    <string name="password_updated">Password updated</string>
    <string name="failed_to_update_password">Failed to update password</string>
    <string name="user">User</string>
    <string name="delete_book">Delete Book</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="book_deleted_">Book deleted</string>
    <string name="cancell">Cancel</string>
    <string name="cancelll">Cancel</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="cancel_">Cancel</string>
    <string name="no_books_available_yet_start_adding_books_to_see_your_statistics">No books available yet.\nStart adding books to see your statistics!</string>
    <string name="no_rated_books_yet">No rated books yet</string>
    <string name="savee">Save</string>
    <string name="edit_profile_">Edit Profile</string>

</resources>