<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <ImageView
            android:id="@+id/reviewCardCover"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:src="@drawable/book_cover" />
        <TextView
            android:id="@+id/reviewCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/reviewCardAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="16sp"
            android:textColor="#666666"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/reviewCardRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textColor="#666666"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/reviewCardReviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textSize="16sp"
            android:textColor="#444444"
            android:lineSpacingExtra="4dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
